--- a/foundry.toml
+++ b/foundry.toml
@@ -3,6 +3,6 @@ version = "0.8.19"
 src = "src"
 out = "out"
 libs = ["lib"]
-eth_rpc_url = "https://ronin-saigon.core.chainstack.com/fcfbfbefddc039f12f96fc9efc47eaf3"
+eth_rpc_url = "CHAINSTACK_NODE_ENDPOINT"
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
